5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1649_1054.log
== TEST (2019-04-11 19:12:51) 
-- CODE:
x=float(input("valor de x"))
y=float(input("valor de y"))

if (2*x)+y=3:
	menssagem="ponto pertence a reta"
else:
	menssagem="ponto nao pertence a reta"

print(menssagem)
-- ERROR:
File "XXXX", line 4
    if (2*x)+y=3:
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:13:04) 
-- CODE:
x=float(input("valor de x"))
y=float(input("valor de y"))

if ((2*x)+y=3):
	menssagem="ponto pertence a reta"
else:
	menssagem="ponto nao pertence a reta"

print(menssagem)
-- ERROR:
File "XXXX", line 4
    if ((2*x)+y=3):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:13:16) 
-- CODE:
x=float(input("valor de x"))
y=float(input("valor de y"))

if ((2*x)+y=3):
	menssagem="ponto pertence a reta"
else:
	menssagem="ponto nao pertence a reta"

print(menssagem)
-- ERROR:
File "XXXX", line 4
    if ((2*x)+y=3):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:14:13) 
-- CODE:
x=float(input("valor de x"))
y=float(input("valor de y"))

if ((2*x)+y=3)
	menssagem="ponto pertence a reta"
else:
	menssagem="ponto nao pertence a reta"

print(menssagem)
-- ERROR:
File "XXXX", line 4
    if ((2*x)+y=3)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:14:23) 
-- CODE:
x=float(input("valor de x"))
y=float(input("valor de y"))

if ((2*x)+y==3)
	menssagem="ponto pertence a reta"
else:
	menssagem="ponto nao pertence a reta"

print(menssagem)
-- ERROR:
File "XXXX", line 4
    if ((2*x)+y==3)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:14:34) 
-- CODE:
x=float(input("valor de x"))
y=float(input("valor de y"))

if (((2*x)+y)==3)
	menssagem="ponto pertence a reta"
else:
	menssagem="ponto nao pertence a reta"

print(menssagem)
-- ERROR:
File "XXXX", line 4
    if (((2*x)+y)==3)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:15:33) 
-- CODE:
x=float(input("valor de x"))
y=float(input("valor de y"))
reta= (2*x)+y
if (reta == 3)
	menssagem="ponto pertence a reta"
else:
	menssagem="ponto nao pertence a reta"

print(menssagem)
-- ERROR:
File "XXXX", line 4
    if (reta == 3)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:17:00) 
-- CODE:
x=float(input("valor de x"))
y=float(input("valor de y"))
reta= (2*x)+y==3
if (reta == 3)
	menssagem="ponto pertence a reta"
else:
	menssagem="ponto nao pertence a reta"

print(menssagem)
-- ERROR:
File "XXXX", line 4
    if (reta == 3)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:17:11) 
-- CODE:
x=float(input("valor de x"))
y=float(input("valor de y"))
reta= (2*x)+y
if (reta == 3):
	menssagem="ponto pertence a reta"
else:
	menssagem="ponto nao pertence a reta"

print(menssagem)
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:17:18) 
-- CODE:
x=float(input("valor de x"))
y=float(input("valor de y"))
reta= (2*x)+y
if (reta == 3):
	menssagem="ponto pertence a reta"
else:
	menssagem="ponto nao pertence a reta"

print(menssagem)
-- EXECUTION TIME:
0.20282
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
